<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activity.LoginActivity">

    <ImageView
        android:id="@+id/log_image"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:src="@drawable/splash"
        android:layout_marginEnd="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/card1"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/card1"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/log_image">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#0f88bf"
            android:text="@string/privileged_guest_login" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textColor="#0f88bf"
            android:text="@string/user_name" />
        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_shape"
            android:drawableStart="@drawable/user"
            android:hint="@string/enter_user_name"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="7sp"
            android:textAlignment="center"
            android:textSize="15sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textColor="#0f88bf"
            android:text="@string/password" />
        <EditText
            android:id="@+id/userpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_shape"
            android:drawableStart="@drawable/key"
            android:hint="@string/enter_password"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            android:minHeight="48dp"
            android:padding="7sp"
            android:textAlignment="center"
            android:textSize="15sp"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/login"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textColor="#0f88bf"
            android:text="@string/help" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
