<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activity.MainActivity">

    <View
        android:id="@+id/header_view"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/unnamed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="120sp"
        android:layout_height="120sp"
        app:layout_constraintBottom_toBottomOf="@id/header_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_view" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7sp"
        android:text="@string/tanvir_zaman_prince"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image" />

    <TextView
        android:id="@+id/pg_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0152512"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2sp"
        android:background="#041b4a"
        android:gravity="center"

        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:paddingBottom="5sp"
        android:paddingTop="5sp"
        android:text="@string/_120_yr"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pg_ID"
        android:textStyle="bold" />
    <HorizontalScrollView
        android:id="@+id/l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/point"
        app:layout_constraintBottom_toTopOf="@id/fm"
        tools:ignore="SpeakableTextPresentCheck">
        <LinearLayout
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/home_item_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:background="@drawable/shape_round_home_items_orange"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:padding="7sp"
                android:text="@string/pg_info"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/home_item_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:background="@drawable/shape_round_home_items_pink_red"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:padding="7sp"
                android:text="@string/contact"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/home_item_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:background="@drawable/shape_round_home_items_blue"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:padding="7sp"
                android:text="@string/point_details"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/home_item_fb_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:background="@drawable/shape_round_home_items_facebook"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:padding="7sp"
                android:text="@string/payment_details"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold" />
<!--            <TextView-->
<!--                android:id="@+id/home_item_insta_follow"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginStart="10dp"-->
<!--                android:layout_marginEnd="10dp"-->
<!--                android:background="@drawable/shape_round_home_items_instagram"-->
<!--                android:drawablePadding="4dp"-->
<!--                android:gravity="center"-->
<!--                android:padding="7sp"-->
<!--                android:text="@string/booking_request"-->
<!--                android:textColor="@android:color/white"-->
<!--                android:textSize="12sp"-->
<!--                android:textStyle="bold"/>-->
            <TextView
                android:id="@+id/Holiday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/holiday_shape"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:padding="7sp"
                android:text="@string/holiday"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

    </HorizontalScrollView>

    <FrameLayout
        android:id="@+id/fm"
        android:layout_width="match_parent"
        android:layout_height="400sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/l"
         />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:scaleType="fitXY"
            android:src="@drawable/logout"
            app:fab_size="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/w"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20sp"
        app:layout_constraintBottom_toTopOf="@id/log"
        app:layout_constraintEnd_toEndOf="parent">
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/custom_fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:scaleType="fitXY"
            android:src="@drawable/whatsapp"
            app:fab_size="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>